# nature-instrument

./: CMakeLists.txt  README.md
plugins/AUv3/: IMPLEMENTATION_SUMMARY.md  README.md  build.sh
plugins/AUv3/KaneMarcoPluginApp/: AppDelegate.swift  ViewController.swift
plugins/AUv3/KaneMarcoPluginExtension/: AudioUnit.swift  AudioUnitViewController.swift  Info.plist  ParameterBridge.swift
plugins/AUv3/SharedDSP/: CMakeLists.txt  KaneMarcoDSP.cpp  KaneMarcoDSP.h
plugins/au/Contents/: Info.plist
plugins/dsp/: UPFS_IMPLEMENTATION_REPORT.md  test_upfs_preset.cpp
plugins/dsp/docs/: ADVANCED_PHYSICS_IMPLEMENTATION.md
plugins/dsp/docs/plans/: GIANT_INSTRUMENT_IMPLEMENTATION.md  KANE_MARCO_AETHER_IMPLEMENTATION.md  KANE_MARCO_AETHER_PRESETS.md  KANE_MARCO_AETHER_PRESET_LOADING_GUIDE.md  KANE_MARCO_AETHER_RESEARCH.md  KANE_MARCO_AETHER_STRING_RESEARCH.md  KANE_MARCO_AETHER_WEEK1_PROGRESS.md  KANE_MARCO_AETHER_WEEK5_COMPLETE.md  KANE_MARCO_AETHER_WEEK_4_SUMMARY.md  KANE_MARCO_AETHER_WEEK_5_COMPLETION_REPORT.md  KANE_MARCO_FAMILY_FINAL_COMPLETION_REPORT.md  KANE_MARCO_FAMILY_WEEK1_STATUS.md  KANE_MARCO_FAMILY_WEEK2_STATUS.md  KANE_MARCO_FAMILY_WEEK3_STATUS.md  KANE_MARCO_FAMILY_WEEK4_STATUS.md  KANE_MARCO_FINAL_STEPS.md  KANE_MARCO_PERFORMANCE_REPORT.md  KANE_MARCO_RESEARCH.md  KANE_MARCO_WEEK4_BUILD_FIXES_NEEDED.md  KANE_MARCO_WEEK4_STATUS.md  KANE_MARCO_WEEK5_COMPLETION_REPORT.md
plugins/dsp/include/dsp/: AetherPureDSP.h  KaneMarcoPureDSP.h  StringPureDSP.h
plugins/dsp/include/ffi/: KaneMarcoFFI.h
plugins/dsp/include/plugin/: AetherGiantProcessor.h  KaneMarcoPluginProcessor.h
plugins/dsp/presets/: aether_giant_instrument_ir.json
plugins/dsp/presets/Aether/: 01_Ethereal_Atmosphere.json  02_Ghostly_Whispers.json  03_Metallic_Dreams.json  04_Breathing_Space.json  05_Crystal_Cavern.json  06_Tension_Builder.json  07_Mystery_Revealed.json  08_Dark_Secret.json  09_SciFi_Encounter.json  10_Emotion_Swell.json  11_Organic_Rustle.json  12_Wind_Through_Trees.json  13_Water_Drops.json  14_Gravel_Crunch.json  15_Deep_Meditation.json  16_Cosmic_Drift.json  17_Industrial_Hum.json  18_Crystal_Bell.json  19_Tibetan_Singing_Bowl.json  20_Warm_Resonant_Pad.json
plugins/dsp/presets/AetherGiantDrums/: 01_Colossus_Kick.json  02_Titan_Tom_Array.json  03_Cathedral_Snare.json  04_Thunder_Frame_Drum.json  05_Mythic_Taiko.json
plugins/dsp/tests/standalone/: CMakeLists.txt  KaneMarcoComprehensiveTest.cpp
plugins/standalone/Contents/: Info.plist
plugins/vst/Contents/: Info.plist
src/: NaturePlugin.cpp
src/dsp/: NatureDSP_Pure_Impl.cpp
(+103 files in other folders)
